fixed alignment in body of home page as well as bottom paragraph

--- a/css/index.css
+++ b/css/index.css
@@ -94,7 +94,8 @@ p {
         justify-content: space-between;
         color:purple;
         font-size:15px;
-        margin:10px 200px 10px 30px;
+        margin:10px 150px 10px 200px;
+        width:55vw;
     }
 
     .jumbo_img{
@@ -105,7 +106,7 @@ p {
 
     .jumbo_lights{
         width:100vw;
-        /*margin: 10px 150px 5px;*/
+        margin-left:350px;
         
 
 
@@ -130,6 +131,7 @@ p {
     flex-direction: row;
     justify-content:space-evenly;
     margin: 10px 200px 5px; 
+    width:55vw;
 }
 
 .text-container_1 {
@@ -144,7 +146,7 @@ p {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
     margin: 10px 50px 5px;
-    width: 100%;
+    width: 70vw;
 }
 
 .middle-content h2 {
@@ -157,13 +159,17 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    width: 85vw;
-    margin:10px 85px 20px;
+    width: 55vw;
+    margin:10px 255px 20px;
     
 }
 
 .middle-content .boxes .box_1 .box {
     background: teal;
+}
+
+.box_header{
+    margin:10px 80px 20px
 }
 
 
@@ -189,9 +195,9 @@ p {
 
 .bottom-content {
     display: flex;
-    margin: 10px 180px 20px;
+    margin: 10px 250px 10px 150px;
     justify-content: space-around;
-    width: 75vw;
+    width: 65vw;
 }
 
 .bottom-content .text-container {
@@ -203,7 +209,7 @@ p {
 }
 
 .d_bottom {
-    margin:10px 200px 20px;
+    margin:10px 765px 10px 350px;
 }
 
 
@@ -252,7 +258,7 @@ footer nav a {
     }
 
 .about_stuff{
-    margin: 10px 270px 10px;
+    margin: 10px 250px 10px;
     width: 50vw;
 }
 
@@ -264,11 +270,14 @@ hr {
 
 .first_pair{
     display:flex;
-	flex-direction:row;
+    flex-direction:row;
+    margin:10px 0 10px 250px;
+    
 }
 
 .first_sect{
-    margin: 10px 200px 20px;
+
+    margin-left: 80px;
     padding:20px;
   
 }
@@ -294,21 +303,22 @@ hr .button {
 .second_pair{
     display:flex;
     flex-direction:row;
+    margin:10px 0 10px 250px;
 }
 
 .second_sect{
-    margin: 10px 10px 10px 20px;
+    margin-right: 100px;
 	padding:20px;
 }
 
 
 .third_sect{
-    margin: 10px 200px 20px;
+    margin-left: 80px;
 	padding:20px;
 }
 
 .fourth_sect{
-    margin: 10px 10px 10px 20px;
+    margin-right: 100px;
 	padding:20px;
 }
 
@@ -353,7 +363,4 @@ hr .button {
 
 
 
-.second_sect{
-    margin: 10px 10px 10px 20px;
-	padding:20px;
-}
+
